// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: 0 1`] = `" (c = 0)"`;

exports[`snapshot: 1 1`] = `" (c = 0)"`;

exports[`snapshot: 2 1`] = `
"1,1 (c = 40)
.. (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..0,1 (c = 30)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
..1,0 (c = 30)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0 (c = 10)
...... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)"
`;

exports[`snapshot: 3 1`] = `" (c = 0)"`;

exports[`snapshot: 4 1`] = `
"1,4,2,3 (c = 140)
..1,2,3,4 (c = 140)
.... (c = 0)
....1,2 (c = 50)
...... (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......2 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
......0,2 (c = 40)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........2 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
......1,0 (c = 30)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1,1 (c = 40)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)"
`;

exports[`snapshot: 5 1`] = `
"1,1 (c = 40)
.. (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..0,1 (c = 30)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
..1,0 (c = 30)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0 (c = 10)
...... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)"
`;

exports[`snapshot: 6 1`] = `
"0,5,2,2 (c = 130)
..0,2,2,5 (c = 130)
.... (c = 0)
....0,2 (c = 40)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......2 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
....0,2,2 (c = 70)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,2 (c = 40)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........2 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
......2 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
......2 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
......0,2 (c = 40)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........2 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
........0,0 (c = 20)"
`;

exports[`snapshot: 7 1`] = `
"7,5,1,3 (c = 200)
..1,3,5,7 (c = 200)
.... (c = 0)
....1,3 (c = 60)
...... (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......3 (c = 40)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........2 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
......0,3 (c = 50)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........0,2 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
......1,0 (c = 30)
........0,1 (c = 30)
.......... (c = 0)"
`;

exports[`snapshot: 8 1`] = `
"7,4,4,4,3,1,8,2 (c = 410)
..1,2,3,4,4,4,7,8 (c = 410)
.... (c = 0)
....1,2,3,4 (c = 140)
...... (c = 0)
......1,2 (c = 50)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........2 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
........0,2 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
........1,0 (c = 30)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
.......... (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........1,1 (c = 40)
.......... (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)"
`;

exports[`snapshot: 9 1`] = `
"1,9,7,3 (c = 240)
..1,3,7,9 (c = 240)
.... (c = 0)
....1,3 (c = 60)
...... (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......3 (c = 40)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........2 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
......0,3 (c = 50)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........0,2 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
......1,0 (c = 30)
........0,1 (c = 30)
.......... (c = 0)"
`;

exports[`snapshot: 10 1`] = `
"5,9,6,9,7,9,4,10,10,1 (c = 800)
..1,4,5,6,7,9,9,9,10,10 (c = 800)
.... (c = 0)
....1,4,5,6,7 (c = 280)
...... (c = 0)
......1,4 (c = 70)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........0,4 (c = 60)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........4 (c = 50)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
............3 (c = 40)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
..............2 (c = 30)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
................1 (c = 20)
.................. (c = 0)
..................0 (c = 10)
.................... (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,2 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,1 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)"
`;
